Module_15/fastapi-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-book-service-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-book-service
      version: v2
  template:
    metadata:
      labels:
        app: fastapi-book-service
        version: v2
    spec:
      containers:
        - name: app
          image: karinaapi/techcore-book-service:v2
          ports:
            - containerPort: 8000
